# ldap_authz_proxy

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE-MIT  LICENSE.md  README.md  build-deb-in-docker.sh  example.ini  run-tests.sh
.github/: dependabot.yml
.github/workflows/: docker-test.yml  release.yml
debian/: README.deb-build  changelog  postinst  service
logrotate.d/: ldap_authz_proxy
src/: config.rs  main.rs
test/: Dockerfile  docker-compose.yml  nginx-site.conf
